remote options simplfied